[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegverse-llm-adapter"
version = "2.1.0"
description = "Dual-purpose governance bridge between LLM outputs and StegVerse execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "StegVerse", email = "dev@stegverse.org"}
]
keywords = ["llm", "governance", "stegverse", "ai-safety", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/StegVerse-org/LLM-adapter"
Repository = "https://github.com/StegVerse-org/LLM-adapter"
Issues = "https://github.com/StegVerse-org/LLM-adapter/issues"
